--- a/toolkit/content/license.html
+++ b/toolkit/content/license.html
@@ -23,14 +23,14 @@
     </div>
   </div>
 
-  <h1 id="Floorp">Floorp LICENSE NOTICE</h1>
+  <h1 id="Floorp">Midori LICENSE NOTICE</h1>
     
-    <h2>Floorp Browser</h2>
-    <p>Copyright 2022 Floorp Projects &amp; Ablaze. All rights reserved.</p>
-    <p>Floorp is an open source project, made possible by Firefox and other open source software</p>
+    <h2>Midori Browser</h2>
+    <p>Copyright 2022 Midori Browser &amp; Astian, Inc. All rights reserved.</p>
+    <p>Midori is an open source project, made possible by Firefox and other open source software</p>
 
     <pre>
-      Floorp's codes written by Floorp developers is licensed under the Mozilla Public License 2.0.
+      Midori codes written by Astian Team & Community developers is licensed under the Mozilla Public License 2.0.
     </pre>
 
     <h3 id="Floorp-used-lisence">Waterfox</h3>
