--- a/floorp/browser/base/content/browser-webpanel.inc.xhtml
+++ b/floorp/browser/base/content/browser-webpanel.inc.xhtml
@@ -8,6 +8,7 @@
    </vbox>
    <spacer flex="1"/>
    <vbox id="bottomButtonBox">
+     <toolbarbutton class="sidepanel-browser-icon" data-l10n-id="sidebar2-hide-sidebar"  oncommand="Services.prefs.setBoolPref('floorp.browser.sidebar.enable', false);" id="sidebar-hide-icon"/>
      <toolbarbutton class="sidepanel-browser-icon" data-l10n-id="sidebar-addons-button"  oncommand="BrowserOpenAddonsMgr();" id="addons-icon"/>
      <toolbarbutton class="sidepanel-browser-icon" data-l10n-id="sidebar-passwords-button"  oncommand="LoginHelper.openPasswordManager(window, { entryPoint: 'mainmenu' });" id="passwords-icon"/>
      <toolbarbutton class="sidepanel-browser-icon" data-l10n-id="sidebar-preferences-button"  oncommand="openPreferences();" id="preferences-icon"/>
