--- a/floorp/browser/base/content/browser-manager-sidebar-context.inc.xhtml
+++ b/floorp/browser/base/content/browser-manager-sidebar-context.inc.xhtml
@@ -4,14 +4,25 @@
 
 <popupset>
   <menupopup id="webpanel-context" onpopupshowing="gBrowserManagerSidebar.contextMenu.show(event);">
-    <menuitem id="muteMenu" class="needLoadedWebpanel" data-l10n-id="sidebar2-mute-and-unmute"
-      label="Mute/Unmute this webpanel" accesskey="M" oncommand="gBrowserManagerSidebar.contextMenu.muteWebpanel();" />
     <menuitem id="unloadWebpanelMenu" class="needLoadedWebpanel" data-l10n-id="sidebar2-unload-panel"
       label="Unload this webpanel" accesskey="U" oncommand="gBrowserManagerSidebar.contextMenu.unloadWebpanel();" />
-    <menuseparator id="context-webpanel-separator" />
+      <menuseparator class="context-webpanel-separator" />
+      <menuitem id="muteMenu" class="needLoadedWebpanel" data-l10n-id="sidebar2-mute-and-unmute"
+        label="Mute/Unmute this webpanel" accesskey="M" oncommand="gBrowserManagerSidebar.contextMenu.muteWebpanel();" />
+      <menu id="changeZoomLevelMenu" class="needLoadedWebpanel needRunningExtensionsPanel" data-l10n-id="sidebar2-change-zoom-level" label="Change Zoom Level" accesskey="Z">
+        <menupopup id="changeZoomLevelPopup">
+          <menuitem id="zoomInMenu" data-l10n-id="sidebar2-zoom-in" label="Zoom In" accesskey="I"
+            oncommand="gBrowserManagerSidebar.contextMenu.zoomIn();" />
+          <menuitem id="zoomOutMenu" data-l10n-id="sidebar2-zoom-out" label="Zoom Out" accesskey="O"
+            oncommand="gBrowserManagerSidebar.contextMenu.zoomOut();" />
+          <menuitem id="resetZoomMenu" data-l10n-id="sidebar2-reset-zoom" label="Reset Zoom" accesskey="R"
+            oncommand="gBrowserManagerSidebar.contextMenu.resetZoom();" />
+        </menupopup>
+      </menu>
     <menuitem id="changeUAWebpanelMenu" data-l10n-id="sidebar2-change-ua-panel"
       label="Switch User agent to Mobile/Desktop Version at this Webpanel" accesskey="R"
       oncommand="gBrowserManagerSidebar.contextMenu.changeUserAgent();" />
+      <menuseparator class="context-webpanel-separator" />
     <menuitem id="deleteWebpanelMenu" data-l10n-id="sidebar2-delete-panel" accesskey="D"
       oncommand="gBrowserManagerSidebar.contextMenu.deleteWebpanel();" />
   </menupopup>
@@ -19,7 +30,7 @@
   <menupopup id="all-panel-context" onpopupshowing="gBrowserManagerSidebar.contextMenu.show(event);">
     <menuitem id="unloadWebpanelMenu" class="needLoadedWebpanel" data-l10n-id="sidebar2-unload-panel"
       label="Unload this webpanel" accesskey="U" oncommand="gBrowserManagerSidebar.contextMenu.unloadWebpanel();" />
-    <menuseparator id="context-webpanel-separator" />
+      <menuseparator class="context-webpanel-separator" />
     <menuitem id="deleteWebpanelMenu" data-l10n-id="sidebar2-delete-panel" accesskey="D"
       oncommand="gBrowserManagerSidebar.contextMenu.deleteWebpanel();" />
   </menupopup>
